# RealEngine

./: .gitignore  .gitmodules  10_Light.cpp  15_LightMap_texture.cpp  1_HelloTriangle.cpp  2_Shader.cpp  3_texture.cpp  48_TextRendering.cpp  8_transformations.cpp  9_MVP.cpp  CMakeLists.txt  Marry.cpp  main.cpp
Docs/D3D12/: Fundation.md
RealEngine/: CMakeLists.txt
RealEngine/Application/: AppWindow.h  Application.cpp  Application.h  ApplicationCore.h  CMakeLists.txt  Reply.cpp  Reply.h
RealEngine/Application/GenericPlatform/: GenericApplication.h  GenericApplicationMessageHandler.h  GenericPlatformFactory.h  GenericPlatformInput.cpp  GenericPlatformInput.h  GenericWindow.h
RealEngine/Application/Input/: ApplicationViewport.h  Events.h  InputKeyManager.cpp  InputKeyManager.h  InputTypes.h
RealEngine/Application/Private/: Application.cpp  Test.h
RealEngine/Application/WindowPlatform/: WindowsApplication.cpp  WindowsApplication.h  WindowsFactory.cpp  WindowsGenericPlatformMisc.cpp  WindowsWindow.cpp  WindowsWindow.h
RealEngine/AssetImporter/: AssetImporter.cpp  AssetImporter.h  CMakeLists.txt
RealEngine/Core/: CMakeLists.txt  Core.cpp  Core.h
RealEngine/Core/Logging/: CmakeLists.txt  Logging.cpp  Logging.h
RealEngine/Core/Math/: Color.cpp  Math.cpp  MathUtility.h  MathUtilityDefine.h  Matrix.h  Matrix3.h  Matrix4.cpp  Matrix4.h  Quat.h  RealSSE.h  Rotator.h  Transform.h  Vector.h  Vector2D.h  Vector4D.h
RealEngine/Core/Module/: ModuleManager.cpp  ModuleManager.h
RealEngine/Core/Windows/: WindowsHeader.h  WindowsMisc.cpp  WindowsMisc.h  WindowsPlatformDefine.h  WindowsPlatformMisc.cpp  WindowsPlatformMisc.h
RealEngine/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  GameViewportClient.cpp  GameViewportClient.h
RealEngine/Engine/Private/: Engine.cpp
RealEngine/GraphicInterface/: Adapter.cpp  Adapter.h  CMakeLists.txt  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  D3D12ThirdPart.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.h  GraphicInterface.cpp  GraphicInterface.h  GraphicViewport.cpp  GraphicViewport.h  LinearAllocator.cpp  LinearAllocator.h  PipelineState.cpp  PipelineState.h  PixelBuffer.cpp  PixelBuffer.h  RHIBuffer.cpp  RHIBuffer.h  RHIResource.h  RHIUploadBuffer.cpp  RHIUploadBuffer.h  RefCounting.h  RootSignature.cpp  RootSignature.h  SamplerDesc.h  Texture.cpp  Texture.h
RealEngine/GraphicInterface/Windows/: WindowsPlatformRHI.cpp
RealEngine/Launch/: CMakeLists.txt  RealMain.cpp  RealMain.h
RealEngine/Launch/Windows/: LaunchWindows.cpp
RealEngine/RHID3D12/: CMakeLists.txt  D3D12Adapter.cpp  D3D12Adapter.h  D3D12Viewport.cpp  D3D12Viewport.h  RHID3D12.cpp  RHID3D12.h  RHID3D12Private.h
RealEngine/Render/: AppWindow.cpp  AppWindow.h  BasePS.hlsl  BaseVS.hlsl  CMakeLists.txt  Camera.cpp  Camera.h  D3DApp.cpp  D3DApp.h  D3DApp.hidden_cpp  D3DApp.hidden_h  Device.cpp  Device.h  GameTIme.h  GameTime.cpp  Helper.cpp  Helper.h  MainShader.hlsl  ModelData.cpp  ModelData.h  PrimitiveInfo.cpp  PrimitiveInfo.h  Render.cpp  Render.h  SceneInfo.h  ViewInfo.cpp  ViewInfo.h  Viewport.h  doc.md  stdafx.h
Shaders/: Shader.cpp  Shader.def  Shader.h  color.frag  color.vert  cube.frag  debugDepthQuad.frag  fragment.frag  glyphs.frag  glyphs.vert  light.frag  lightingCube.frag  lightingCube.vert  lightingMap.frag  lightingMap.vert  lightingMap_Spotlight.frag  marry.frag  marry.vert  modelLoading.frag  multipleLighting.frag  shadowmapping.frag  shadowmapping.vert  vertex.vert
cmake/: colors.cmake
resources/: win.rc  win.res
resources/GenShin/: untitled.gltf  untitled.mini
resources/HuangQuan/: 星穹铁道—黄泉（轴修复）.pmx
resources/objects/mary/: Marry.mtl
utility/: Camera.cpp  Camera.h  CoreType.h  LightObject.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Model.cpp  Model.h  Render.cpp  Render.h  SceneObject.cpp  SceneObject.h  TextRender.cpp  TextRender.h  Utility.cpp  Utility.h
