# use submodule https://zhuanlan.zhihu.com/p/87053283
add_subdirectory(ThirdParty/assimp)

add_subdirectory(Core)

add_subdirectory(AssetImporter)

add_subdirectory(GraphicInterface)

add_subdirectory(RHID3D12)

add_subdirectory(Application)

add_subdirectory(Render)

add_subdirectory(Engine)

add_subdirectory(Launch)

